# chnu-data-engineering

./: .gitignore
composetest/: Dockerfile  Makefile  app.py  docker-compose.yml
lab4/: Makefile  docker-compose.yml  pyproject.toml  unzip.py
lab4/jobs/: process.py
lab5/: Dockerfile  docker-compose.yml  pyproject.toml
lab5/consumer/: __main__.py
lab5/producer/: __main__.py
lab6/: Dockerfile  docker-compose.yml  pyproject.toml
lab6/src/lab6/: consumer.py  producer.py
lab7/: Makefile  README.md  requirements.txt
lab7/.astro/: config.yaml
lab7/dags/: time_series.py
