[project]
name = "lab4"
version = "0.1.0"
description = ""
authors = [
    {name = "romashorodok",email = "108732029+romashorodok@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyspark (>=3.5.5,<4.0.0)"
]

[tool.poetry]
packages = [{include = "jobs"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
